ajout dao et principes solid