@@ -1,15 +1,14 @@
 package com.fges;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.PrintStream;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -18,126 +17,110 @@ class GroceryServiceTest {
     @TempDir
     Path tempDir;
 
-    @Test
-    void should_load_items_from_json() throws IOException {
-        // arrange
-        Path jsonFile = tempDir.resolve("test.json");
-        Files.writeString(jsonFile, "[\"Milk: 10\",\"Bread: 2\"]");
+    private String testFilePath;
+    private GroceryService service;
+    private ByteArrayOutputStream outContent;
+    private PrintStream originalOut;
 
-        GroceryService service = new GroceryService(jsonFile.toString(), "json");
+    @BeforeEach
+    void setUp() {
+        testFilePath = tempDir.resolve("test-groceries.json").toString();
+        service = new GroceryService(testFilePath, "json", "default");
 
-        // act
-        List<String> items = service.getItems();
-
-        // assert
-        assertThat(items).hasSize(2);
-        assertThat(items).containsExactly("Milk: 10", "Bread: 2");
+        // Set up System.out capture
+        originalOut = System.out;
+        outContent = new ByteArrayOutputStream();
+        System.setOut(new PrintStream(outContent));
     }
 
     @Test
-    void should_load_items_from_csv() throws IOException {
-        // arrange
-        Path csvFile = tempDir.resolve("test.csv");
-        Files.writeString(csvFile, "Milk: 10\nBread: 2");
-
-        GroceryService service = new GroceryService(csvFile.toString(), "csv");
-
-        // act
-        List<String> items = service.getItems();
-
-        // assert
-        assertThat(items).hasSize(2);
-        assertThat(items).containsExactly("Milk: 10", "Bread: 2");
-    }
-
-    @Test
-    void should_save_items_to_json() throws IOException {
-        // arrange
-        Path jsonFile = tempDir.resolve("test.json");
-        GroceryService service = new GroceryService(jsonFile.toString(), "json");
-        List<String> items = Arrays.asList("Milk: 10", "Bread: 2");
-
-        // act
-        service.saveItems(items);
-        String content = Files.readString(jsonFile);
-
-        // Tassert
-        assertThat(content).contains("Milk: 10");
-        assertThat(content).contains("Bread: 2");
-    }
-
-    @Test
-    void should_save_items_to_csv() throws IOException {
-        // arrange
-        Path csvFile = tempDir.resolve("test.csv");
-        GroceryService service = new GroceryService(csvFile.toString(), "csv");
-        List<String> items = Arrays.asList("Milk: 10", "Bread: 2");
-
-        // act
-        service.saveItems(items);
-        List<String> lines = Files.readAllLines(csvFile);
-
-        //  assert
-        assertThat(lines).hasSize(2);
-        assertThat(lines).containsExactly("Milk: 10", "Bread: 2");
-    }
-
-    @Test
-    void should_add_item() throws IOException {
-        // Given
-        Path jsonFile = tempDir.resolve("test.json");
-        Files.writeString(jsonFile, "[]");
-
-        GroceryService service = new GroceryService(jsonFile.toString(), "json");
-
+    void should_add_item_successfully() throws IOException {
         // When
-        int result = service.executeCommand("add", Arrays.asList("Milk", "10"));
+        int result = service.executeCommand("add", Arrays.asList("Apple", "5"));
 
         // Then
         assertThat(result).isEqualTo(0);
-        List<String> items = service.getItems();
-        assertThat(items).hasSize(1);
-        assertThat(items.get(0)).isEqualTo("Milk: 10");
+
+        // Verify item was added by listing
+        service.executeCommand("list", Arrays.asList());
+        assertThat(outContent.toString()).contains("Apple, 5");
     }
 
     @Test
-    void should_list_items() throws IOException {
-        // arrange
-        Path jsonFile = tempDir.resolve("test.json");
-        Files.writeString(jsonFile, "[\"Milk: 10\",\"Bread: 2\"]");
+    void should_return_error_when_add_with_missing_args() throws IOException {
+        // When
+        int result = service.executeCommand("add", Arrays.asList("Apple"));
 
-        GroceryService service = new GroceryService(jsonFile.toString(), "json");
-
-        ByteArrayOutputStream outContent = new ByteArrayOutputStream();
-        System.setOut(new PrintStream(outContent));
-
-        // act
-        int result = service.executeCommand("list", List.of());
-
-        // assert
-        assertThat(result).isEqualTo(0);
-        assertThat(outContent.toString()).contains("Milk: 10");
-        assertThat(outContent.toString()).contains("Bread: 2");
-
-        // Restore stdout
-        System.setOut(System.out);
+        // Then
+        assertThat(result).isEqualTo(1);
+        assertThat(outContent.toString()).contains("Missing arguments");
     }
 
     @Test
-    void should_remove_item() throws IOException {
-        // arrange
-        Path jsonFile = tempDir.resolve("test.json");
-        Files.writeString(jsonFile, "[\"Milk: 10\",\"Bread: 2\"]");
+    void should_return_error_when_add_with_non_numeric_quantity() throws IOException {
+        // When
+        int result = service.executeCommand("add", Arrays.asList("Apple", "five"));
 
-        GroceryService service = new GroceryService(jsonFile.toString(), "json");
+        // Then
+        assertThat(result).isEqualTo(1);
+        assertThat(outContent.toString()).contains("Quantity must be a number");
+    }
 
-        // act
-        int result = service.executeCommand("remove", List.of("Milk"));
+    @Test
+    void should_remove_item_successfully() throws IOException {
+        // Given
+        service.executeCommand("add", Arrays.asList("Apple", "5"));
+        service.executeCommand("add", Arrays.asList("Banana", "3"));
+        outContent.reset();
 
-        // assert
+        // When
+        int result = service.executeCommand("remove", Arrays.asList("Apple"));
+
+        // Then
         assertThat(result).isEqualTo(0);
-        List<String> items = service.getItems();
-        assertThat(items).hasSize(1);
-        assertThat(items.get(0)).isEqualTo("Bread: 2");
+
+        // Verify item was removed
+        outContent.reset();
+        service.executeCommand("list", Arrays.asList());
+        String output = outContent.toString();
+        assertThat(output).contains("Banana, 3");
+        assertThat(output).doesNotContain("Apple, 5");
+    }
+
+    @Test
+    void should_display_info_correctly() throws IOException {
+        // When
+        int result = service.executeCommand("info", Arrays.asList());
+
+        // Then
+        assertThat(result).isEqualTo(0);
+        String output = outContent.toString();
+        assertThat(output).contains("Date:");
+        assertThat(output).contains("Operating System:");
+        assertThat(output).contains("Java Version:");
+    }
+
+    @Test
+    void should_return_error_for_unknown_command() throws IOException {
+        // When
+        int result = service.executeCommand("unknown", Arrays.asList());
+
+        // Then
+        assertThat(result).isEqualTo(1);
+        assertThat(outContent.toString()).contains("Unknown command");
+    }
+
+    @Test
+    void should_delete_file_successfully() throws IOException {
+        // Given
+        service.executeCommand("add", Arrays.asList("TestItem", "1"));
+        outContent.reset();
+
+        // When
+        int result = service.executeCommand("delete", Arrays.asList());
+
+        // Then
+        assertThat(result).isEqualTo(0);
+        assertThat(outContent.toString()).contains("File deleted successfully");
     }
 }
